Crash in DisplayLink::notifyObserversDisplayWasRefreshed() on macOS https://bugs.webkit.org/show_bug.cgi?id=228790 <rdar://81338621>

Reviewed by Tim Horton.

Defend against DisplayLink::nominalFramesPerSecondFromDisplayLink() returning zero,
which can result in a later divide by zero in m_currentUpdate.nextUpdate().

* UIProcess/mac/DisplayLink.cpp:
(WebKit::DisplayLink::nominalFramesPerSecondFromDisplayLink):

Canonical link: https://commits.webkit.org/240264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280653 268f45cc-cd09-0410-ab3c-d52691b4dbfc